--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "zouzhanhao/log",
     "type": "library",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "zzh",
